Image Editor: Render info not displayed #43831

Closed
opened 2015-02-27 17:01:23 +01:00 by Thomas Dinges · 8 comments

System Information
Linux x64, Intel HD 2500

Blender Version
Broken: 2.71, and every release after that. Master is also broken
Worked: 2.70a

Short description of error
Open Caminandes file 11a_comp.blend. (Probably not needed, but for completeness, switch to frame 500, resolution 1280x720).
Press F12.

In 2.70a, the info bar with render time, memory and status is being displayed. In 2.71 and later this is missing.

**System Information** Linux x64, Intel HD 2500 **Blender Version** Broken: 2.71, and every release after that. Master is also broken Worked: 2.70a **Short description of error** Open Caminandes file 11a_comp.blend. (Probably not needed, but for completeness, switch to frame 500, resolution 1280x720). Press F12. In 2.70a, the info bar with render time, memory and status is being displayed. In 2.71 and later this is missing.
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Sergey Sharybin was assigned by Thomas Dinges 2015-02-27 17:01:23 +01:00
Author
Owner

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Can confirm that. Caused by b62c2a913b.

Can confirm that. Caused by b62c2a913b.
Author
Owner

Thanks a lot for finding the root of the issue Julian.

Thanks a lot for finding the root of the issue Julian.

This issue was referenced by 26d7b6c517

This issue was referenced by 26d7b6c51792e0b601ae24e88308eaefb66e3b8b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 26d7b6c517.

Closed by commit 26d7b6c517.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43831
No description provided.