source/blender/editors/render/render_internal.c
@@ -1617,7 +1617,17 @@ Scene *ED_render_job_get_scene(const bContext *C)
 	RenderJob *rj = (RenderJob *)WM_jobs_customdata_from_type(wm, WM_JOB_TYPE_RENDER);
 	
 	if (rj)
-		return rj->current_scene;
+		return rj->scene;
 	
+	return NULL;
+}
+
+Scene *ED_render_job_get_current_scene(const bContext *C)
+{
+	wmWindowManager *wm = CTX_wm_manager(C);
+	RenderJob *rj = (RenderJob *)WM_jobs_customdata_from_type(wm, WM_JOB_TYPE_RENDER);
+	if (rj) {
+		return rj->current_scene;
+	}
 	return NULL;
 }
